# lily-cms

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  justfile
.bruno/: Content (create one).bru  Content (create one, invalid).bru  Content (delete one).bru  Content (get all).bru  Content (get one).bru  Content (get one, invalid).bru  Content (post one).bru  Content (read all).bru  Content (read one).bru  Content (read one, invalid).bru  Content (read one, unknown).bru  Content (update one).bru  bruno.json
examples/basic/: Cargo.toml  main.rs
examples/basic/src/: main.rs
examples/basic/src/types/: content.rs
examples/basic/types/: content.rs
examples/lily-and-axum/: main.rs
examples/lily-and-axum/types/: content.rs
lily/: Cargo.toml
lily-cms-derive/: Cargo.toml
lily-cms-derive/src/: lib.rs
lily-core/: Cargo.toml
lily-endpoint/: Cargo.toml
lily-endpoint/src/: lib.rs  routing.rs
lily-macros/: Cargo.toml
lily-macros/src/: endpoint.rs  lib.rs  routing.rs  util.rs
lily-macros/src/endpoint/: payload.rs  route_gen.rs
lily/src/: lib.rs
src/: errors.rs  lib.rs  lily.rs  main.rs  prelude.rs  problems.rs  requests.rs  response.rs  responses.rs  routing.rs  types.rs
src/integrations/: axum.rs
src/lily/: core.rs  types.rs
src/lily/core/: cms_builder.rs  env.rs  errors.rs  welcome.rs
src/lily/types/: content.rs  prelude.rs
tests/: hurl.just  hurl_health.hurl  hurl_variables
tests/hurl_tests/: content.hurl
