[package]
name = "lily-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
lily-cms-derive = { path = "./lily-cms-derive" }
axum = { version = "0.8.4", features = ["macros"]}
dotenv = "0.15"
hyper = { version= "1.6.0", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"