[package]
name = "lily-cms"
version = "0.1.0"
edition = "2024"

[dependencies]
lily-macros = { path = "./lily-macros" }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"
tokio = { version = "1.45.1", features = ["full"] }
chrono = {version="0.4.41", features=["serde"]}
http-serde = "2.1.1"
